--- a/style.css
+++ b/style.css
@@ -3,76 +3,45 @@
 }
 
 h1 {
-    text-align: center;
-    font-family: var(--font-family);
     color: red;
-}
-
-#start {
-    margin-top: 20px;
-    margin-left: 20px;
-    width: 80px;
-    height: 30px;
-    letter-spacing: 1px;
     font-family: var(--font-family);
-    font-size: 15px;
-    background-color: rgba(255, 0, 0, 0.7);
-    color: white;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    outline: none;
+    text-align: center;
+    font-size: 40px;
 }
 
-#ask {
-    margin-top: 50px;
-    margin-left: 27%;
-    font-family: var(--font-family);
+#player {
+    margin: 20px 0 20px 380px;
+} 
+
+.player-image {
+    width: 130px;
+    height: 130px;
+    padding: 0 50px 0 0;
 }
 
-#rock, #paper, #scissors {
-    width: 90px;
-    height: 30px;
-    letter-spacing: 1px;
-    font-family: var(--font-family);
-    font-size: 15px;
-    background-color: rgba(255, 0, 0, 0.7);
-    color: white;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    outline: none;
-}
-
-#submit {
-    margin-top: 20px;
-    margin-left: 47%;
-    width: 80px;
-    height: 30px;
-    letter-spacing: 1px;
-    font-family: var(--font-family);
-    font-size: 15px;
-    background-color: rgba(255, 0, 0, 0.7);
-    color: white;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    outline: none;
-}
-
-#submit:hover, #start:hover, #rock:hover, #paper:hover, #scissors:hover {
+.player-image:hover {
     cursor: pointer;
-    background-color: #6B5B95;
+    transform: scale(1.2);
 }
 
-#player-choice, #computer-choice {
-    color: blue;
+#computer {
+    margin-left: 440px;
+}
+
+.computer-image {
+    width: 100px;
+    height: 100px;
+    padding: 0 30px 0 0;
 }
 
 #result {
-    margin-top: 40px;
-    color: #339900;
-} 
-
-.chose {
-    margin-top: 50px;
-    margin-left: 35%;
+    text-align: center;
+    font-size: 30px;
+    color: green;
     font-family: var(--font-family);
+}
+
+#scores {
+    font-family: var(--font-family);
+    text-align: center;
 }
